# api_django

./: .env.local  .gitignore  db.sqlite3  manage.py  pyproject.toml
api/: settings.py  urls.py
attendants/: apps.py  models.py
attendants/migrations/: 0001_initial.py
digisac/: apps.py
digisac/api/: request_utils.py
digisac/api_digisac/: request_utils.py
digisac/management/commands/: get_protocols.py
protocols/: models.py  serializers.py  urls.py  views.py
protocols/management/commands/: teste.py
protocols/migrations/: 0001_initial.py  0002_protocol_is_business_hours_protocol_is_from_me.py  0003_alter_protocol_number.py  0004_alter_protocol_total_attendance_time.py  0005_protocol_type_call.py  0006_remove_protocol_type_call.py
protocols/update_database/: update.py
protocols/views/customers/: calls_per_month.py  companies_name.py  names_per_year.py  statistics.py
protocols/views/employees/: average_calls_attendant.py  average_time_by_attendant.py  protocol_by_attendant.py  protocol_by_department.py  statistics.py
users/: models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_useraccount_avatar.py  0003_alter_useraccount_avatar.py
